[package]
name = "asciinema-streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1.14.0", features = ["full"] }
anyhow = "1.0"
futures-util = "0.3.18"
avt = { git = "https://github.com/asciinema/avt.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
warp = "0.3.2"
warp-embed = "0.4.0"
rust-embed = "6.4.0"
async-stream = "0.3.3"
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"] }
regex = "1"
url = "2.4.0"
