[package]
name = "asciinema-streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0"
futures-util = "0.3.28"
avt = { git = "https://github.com/asciinema/avt.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
warp = "0.3.5"
warp-embed = "0.4.0"
rust-embed = "6.8.1"
async-stream = "0.3.5"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = { version = "0.19.0", features = ["rustls-tls-webpki-roots"] }
regex = "1"
url = "2.4.0"
lazy_static = "1.4.0"
atty = "0.2.14"
termion = "2.0.1"
